<resources>
    <string name="app_name">One More Goal - Extratime</string>
    <string name="title_scores">Tabelle</string>
    <string name="title_matches">Spiele</string>
    <string name="title_stats">Wissenswertes</string>
    <string name="title_activity_startup">One More Goal - Verlaengerung</string>
    <string name="hint_set_username">1/4: Bitte waehle einen Spielernamen</string>
    <string name="hint_wrong_fanname">Bitte gebe einen gueltigen Namen ein</string>
    <string name="hint_bet_champion">2/4: Waehle einen Weltmeister</string>
    <string name="hint_set_topscorer">3/4: Waehle deinen Torschuetzenkoenig</string>
    <string name="hint_set_manoftournament">4/4: Waehle deinen Spieler des Turniers</string>

    <string name="group">Gruppe</string>
    <string name="match_date">Tag Zeit Ort</string>
    <string name="home_flag">home_flag</string>
    <string name="away_flag">away_flag</string>
    <string name="home">Home</string>
    <string name="vs_char">:</string>
    <string name="away">Away</string>
    <string name="next_bet">Weiter</string>


</resources>
