<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">


           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/home"
            android:id="@+id/stats_home_name"
            android:layout_margin="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stats_home_flag"
            android:minHeight="64dp"
            android:contentDescription="@string/home_flag"
            android:src="@drawable/ic_home_black_24dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vs_char"
            android:id="@+id/textView2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stats_away_flag"
            android:minHeight="64dp"
            android:layout_gravity="right"
            android:contentDescription="@string/away_flag"
            android:src="@drawable/ic_home_black_24dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/away"
            android:id="@+id/stats_away_name"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/stats_row_result"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="20dp"
            android:text="1:2"/>



</LinearLayout>